# pixy

./: .gitignore  LICENSE  README.md  pixyconfig.sample  pyproject.toml  setup.py
pixy/: __main__.py
