[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pixy"
version = "1.1.0"
description = "Use pip from behind a proxy"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Justus Röderer", email = "mail@dateiexplorer.de" }]

[project.scripts]
pixy = "pixy.__main__:main"